Correção de todos os warnings "NULLPOINTEREXCEPTION".